# Zigbee-boardgames

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
apps/initiative-tracker/: .gitignore  AGENTS.md  build.sh  go.mod  go.sum  main.go  ui.go  ui_test.go
apps/initiative-tracker-rs/: AGENTS.md  Cargo.toml
apps/initiative-tracker-rs/src/: app.rs  lib.rs  main.rs  tracker.rs
apps/timer-switcher/: build.sh  go.mod  main.go  timer.go  timer_test.go  ui.go  ui_test.go
apps/timer-switcher-rs/: AGENTS.md  Cargo.toml
apps/timer-switcher-rs/src/: app.rs  main.rs  timer.rs
crates/api/: Cargo.toml
crates/api/src/: handlers.rs  lib.rs  server.rs  state.rs  tests.rs
crates/client/: Cargo.toml
crates/client/src/: client.rs  lib.rs  listen.rs  registry.rs
crates/core/: Cargo.toml
crates/core/src/: broadcast.rs  button.rs  event.rs  hub.rs  lib.rs  registry.rs
crates/dashboard/: Cargo.toml  Trunk.toml  build.sh  index.html
crates/dashboard/src/: api.rs  components.rs  lib.rs  main.rs  pages.rs
crates/mqtt/: Cargo.toml
crates/mqtt/src/: client.rs  lib.rs
go/: README.md  events.go  go.mod  go_test.go  listen.go  registry.go  sse.go
go/cmd/demo/: main.go
scripts/: build-all.sh  dev-setup.sh  run-dashboard-dev.sh  run-dev.sh  run-prod.sh  run-with-env.sh  setup-arch.sh  setup.sh  test-all.sh  test-setup.sh
src/: main.rs
