[workspace]
members = ["crates/core", "crates/mqtt", "crates/api", "crates/dashboard", "."]
resolver = "2"

[package]
name = "button-hub"
version = "0.1.0"
edition = "2021"

[dependencies]
button_core = { path = "crates/core" }
mqtt = { path = "crates/mqtt" }
api = { path = "crates/api" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
anyhow = "1"
