[package]
name = "initiative-tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
button-client = { path = "../../crates/client" }
eframe = { version = "0.29", features = ["default_fonts", "glow"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
parking_lot = "0.12"
once_cell = "1"