[package]
name = "timer-switcher"
version = "0.1.0"
edition = "2021"

[dependencies]
# Client library
button-client = { path = "../../crates/client" }

# GUI
eframe = { version = "0.29", default-features = false, features = ["glow", "default_fonts"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"

# Utilities
parking_lot = "0.12"
once_cell = "1"