[package]
name = "button-client"
version = "0.1.0"
edition = "2021"

[dependencies]
# Re-export event types from core
button_core = { path = "../core" }

# Async runtime and networking
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros", "sync"] }
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async utilities
futures-core = "0.3"
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["io"] }
bytes = "1"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"

[lib]
name = "button_client"
path = "src/lib.rs"