[package]
name = "button_core"
version = "0.1.0"
edition = "2021"

[features]
default = ["tokio"]
tokio = ["dep:tokio", "dep:dashmap", "dep:tracing"]

[dependencies]
tokio = { version = "1", features = ["full"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = { version = "0.1", optional = true }
chrono = { version = "0.4", features = ["serde"] }
dashmap = { version = "5", optional = true }
