[package]
name = "dashboard"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
leptos_meta = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo-net = { version = "0.5", features = ["http"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "EventSource",
    "MessageEvent",
    "Event",
    "HtmlElement",
    "Window",
    "Document",
] }
tracing = "0.1"
tracing-wasm = "0.2"
chrono = { version = "0.4", features = ["serde"] }
button_core = { path = "../core", default-features = false }
gloo-timers = { version = "0.3", features = ["futures"] }
futures-util = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"
